<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>
    <string name="but_">Hello</string>
    <string name="tv_">gestures</string>
    <string name="title_activity_two_fragment">TwoFragment</string>
    <string name="click_here">click here</string>
    <string name="life_cycle">Life Cycle</string>
    <string name="gesture">gesture</string>
    <string name="fragment">fragment</string>

    <string-array name="workout_spinner">
        <item>Select item...</item>
        <item>Chest</item>
        <item>Biseps</item>
        <item>Abs</item>
        <item>Legs</item>
        <item>Shoulder</item>
    </string-array>
    <string name="title_activity_overflow_menu">OverflowMenu</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="overflow_menu">Overflow Menu</string>
    <string name="animate">Animate</string>
    <string name="animation">Animation</string>
    <string name="broadcast">Broadcast</string>
    <string name="broadcast_and_receive">Broadcast and Receive</string>
</resources>
